src/objects/Cloud_Issue__c.object
<CustomObject>
    <fields>
        <fullName>Cloud_Customer__c</fullName>
        <label>Cloud Customer</label>
        <referenceTo>Cloud_Customer__c</referenceTo>
        <relationshipLabel>Cloud Issues</relationshipLabel>
        <relationshipName>Cloud_Issues</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opened_Date__c</fullName>
        <label>Opened Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cloud_Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Plan__c</fullName>
        <label>Plan</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Cloud Issue</label>
    <nameField>
        <displayFormat>CI-{00000}</displayFormat>
        <label>Cloud Issue Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cloud Issues</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>